--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import './scss/partials/homeStyle';
 @import './scss/partials/footer';
 @import './scss/grid/grid';
+@import './scss/partials/entryFormStyle';
 
 *{
   padding: 0px;
