--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -9,7 +9,11 @@ $logoWhite-SVG: url("./components/images/ultraTreningLogo1White.svg") ;
 $logo-SVG2: url("./components/images/ultraTreningLogo2.svg");
 $logoWhite-SVG2: url("./components/images/ultraTreningLogo2White.svg");
 $backgroundMain1-SVG: url("./components/images/backgroundMain1.svg");
+
 $backgroundMainBridges-SVG: url("./components/images/bridge.jpg");
+$backgroundMainSunsetBike-SVG: url("./components/images/sunset-bike.jpg");
+
+
 $backgroundMain2-SVG: url("./components/images/backgroundMain2.svg");
 $backgroundsection2-SVG: url("./components/images/backgroundsection2.svg");
 $backgroundsection4-SVG: url("./components/images/backgroundsection4.svg");
