--- a/src/scss/partials/homeStyle-partials/_fifthSection.scss
+++ b/src/scss/partials/homeStyle-partials/_fifthSection.scss
@@ -7,7 +7,7 @@
 
 .safety-class{
   // height: 40vh;
-  // background-color: black;
+  background-color: rgba(245,245,245,0.9);
 }
 .safety-cnt{
   display: flex;
