--- a/src/scss/partials/homeStyle-partials/_fourthSection.scss
+++ b/src/scss/partials/homeStyle-partials/_fourthSection.scss
@@ -2,23 +2,16 @@
 @import "../../modules/mixins";
 @import "../../modules/mediaQueryMixins";
 
-
-
-
 // SECTION 4 STYLING
 
 .chain-class{
-  // height: 200vh;
-  // background-image: $backgroundsection4-SVG;
-  // background-size: contain;
   background-attachment: fixed;
   background-color: 	rgba(230, 230, 230,0.8);
   background-image: $backgroundMain1-SVG;
-
 }
 #chain-title{
-  background-color: $main-color;
-  // color:white;
+  background-color: rgba(100, 100, 100,0.8);;
+  color:white;
   height:10vh;
   font-size: 50px;
   display: flex;
@@ -34,53 +27,70 @@
   align-items: center;
   // border: 1px solid green;
   .chain-all-links{
-    width:160px;
-    height:160px;
+    width:190px;
+    height:190px;
+    margin: 10px;
     background-color: $main-color-opacity;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+    @include mobile2{
+      width:230px;
+      height:230px;
+      margin: 25px 20px 25px 20px;
+    };
+    @include laptop{
+      margin: 60px 10px 60px 10px;
+      // margin-bottom: 60px;
+      width:170px;
+      height:170px;
+    };
+    @include desktop{
+      margin: 60px 10px 60px 10px;
+      // margin-bottom: 60px;
+      width:210px;
+      height:210px;
+    };
 
     .chain-link-no{
-      // opacity: 1;
-      // margin-top: 30px;
-      // border: 1px solid green;
-      // margin-bottom: 0px;
-      // display: flex;
-      // flex-wrap: wrap;
-      // justify-content: center;
-      // align-items: center;
       font-weight: bold;
       color: white;
-      // height: 9vh;
-      // width:42vh;
       font-size: 70px;
-
+    }
+    @for $i from 1 through 5 {
+      .chain-link-texts#{$i}{
+        text-align:center;
+        font-weight: bold;
+        font-size: 22px;
+       }
     }
     .chain-link-texts1{
-      font-size: 20px;
-      font-weight: bold;
-      text-align:center;
+      margin-bottom: 25px;
     }
-    .chain-link-texts{
-      // border: 1px solid green;
+    .chain-link-texts2{
+      margin-bottom: 25px;
+      @include mobile2{
+        margin-bottom: 50px;
+      };
+      @include laptop{
+        margin-bottom: 25px;
+      };
+      @include desktop{
+        margin-bottom: 50px;
+      };
+    }
+    .chain-link-texts3{
+      margin-bottom: 52px;
+    }
+    .chain-link-texts4{
+      margin-bottom: 52px;
+    }
+    .chain-link-texts5{
+      margin-bottom: 52px;
+    }
 
-      margin-bottom: 20px;
-      text-align:center;
-      font-weight: bold;
-      // color: white;
-      font-size: 22px;
-    }
   }
 
-  .link{
-    height: 4vh;
-    width: 100%;
-    // background-image: $broadBelt-SVG;
-    // background-color: $main-color;
-    // background-size: contain;
-    // background-position: center;
-  }
 }
