--- a/src/App.css
+++ b/src/App.css
@@ -84,11 +84,17 @@
       display: flex;
       align-items: flex-start;
       justify-content: center;
-      background-color: white;
+      background: repeating-linear-gradient(-20deg, #ebebeb, #ebebeb 47%, #fafafa 50%, #fafafa 100%);
+      background: -webkit-linear-gradient(-20deg, #ebebeb, #ebebeb 47%, #fafafa 50%, #fafafa 100%);
+      background: -o-linear-gradient(-20deg, #ebebeb, #ebebeb 47%, #fafafa 50%, #fafafa 100%);
+      background: -moz-linear-gradient(-20deg, #ebebeb, #ebebeb 47%, #fafafa 50%, #fafafa 100%);
       color: black; }
       @media (min-width: 768px) {
         #row-1 .nav-btns-cont0 .nav-btns {
-          background-color: rgba(0, 237, 0, 0.8);
+          background: repeating-linear-gradient(-15deg, rgba(0, 228, 0, 0.8), rgba(0, 228, 0, 0.8) 47%, rgba(0, 237, 0, 0.8) 50%, rgba(0, 237, 0, 0.8) 100%);
+          background: -webkit-linear-gradient(-15deg, rgba(0, 228, 0, 0.8), rgba(0, 228, 0, 0.8) 47%, rgba(0, 237, 0, 0.8) 50%, rgba(0, 237, 0, 0.8) 100%);
+          background: -o-linear-gradient(-15deg, rgba(0, 228, 0, 0.8), rgba(0, 228, 0, 0.8) 47%, rgba(0, 237, 0, 0.8) 50%, rgba(0, 237, 0, 0.8) 100%);
+          background: -moz-linear-gradient(-15deg, rgba(0, 228, 0, 0.8), rgba(0, 228, 0, 0.8) 47%, rgba(0, 237, 0, 0.8) 50%, rgba(0, 237, 0, 0.8) 100%);
           color: white;
           height: 50px;
           width: 150px;
@@ -165,11 +171,17 @@
       display: flex;
       align-items: flex-start;
       justify-content: center;
-      background-color: white;
+      background: repeating-linear-gradient(-20deg, #ebebeb, #ebebeb 47%, #fafafa 50%, #fafafa 100%);
+      background: -webkit-linear-gradient(-20deg, #ebebeb, #ebebeb 47%, #fafafa 50%, #fafafa 100%);
+      background: -o-linear-gradient(-20deg, #ebebeb, #ebebeb 47%, #fafafa 50%, #fafafa 100%);
+      background: -moz-linear-gradient(-20deg, #ebebeb, #ebebeb 47%, #fafafa 50%, #fafafa 100%);
       color: black; }
       @media (min-width: 768px) {
         #row-1 .nav-btns-cont1 .nav-btns {
-          background-color: rgba(0, 237, 0, 0.8);
+          background: repeating-linear-gradient(-15deg, rgba(0, 228, 0, 0.8), rgba(0, 228, 0, 0.8) 47%, rgba(0, 237, 0, 0.8) 50%, rgba(0, 237, 0, 0.8) 100%);
+          background: -webkit-linear-gradient(-15deg, rgba(0, 228, 0, 0.8), rgba(0, 228, 0, 0.8) 47%, rgba(0, 237, 0, 0.8) 50%, rgba(0, 237, 0, 0.8) 100%);
+          background: -o-linear-gradient(-15deg, rgba(0, 228, 0, 0.8), rgba(0, 228, 0, 0.8) 47%, rgba(0, 237, 0, 0.8) 50%, rgba(0, 237, 0, 0.8) 100%);
+          background: -moz-linear-gradient(-15deg, rgba(0, 228, 0, 0.8), rgba(0, 228, 0, 0.8) 47%, rgba(0, 237, 0, 0.8) 50%, rgba(0, 237, 0, 0.8) 100%);
           color: white;
           height: 50px;
           width: 150px;
@@ -572,7 +584,10 @@
     width: 190px;
     height: 190px;
     margin: 10px;
-    background-color: rgba(0, 237, 0, 0.8);
+    background: repeating-linear-gradient(-45deg, rgba(0, 228, 0, 0.8), rgba(0, 228, 0, 0.8) 47%, rgba(0, 237, 0, 0.8) 50%, rgba(0, 237, 0, 0.8) 100%);
+    background: -webkit-linear-gradient(-45deg, rgba(0, 228, 0, 0.8), rgba(0, 228, 0, 0.8) 47%, rgba(0, 237, 0, 0.8) 50%, rgba(0, 237, 0, 0.8) 100%);
+    background: -o-linear-gradient(-45deg, rgba(0, 228, 0, 0.8), rgba(0, 228, 0, 0.8) 47%, rgba(0, 237, 0, 0.8) 50%, rgba(0, 237, 0, 0.8) 100%);
+    background: -moz-linear-gradient(-45deg, rgba(0, 228, 0, 0.8), rgba(0, 228, 0, 0.8) 47%, rgba(0, 237, 0, 0.8) 50%, rgba(0, 237, 0, 0.8) 100%);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -680,23 +695,86 @@
   -o-transform: 0px 3px 4px 0 grey;
   box-shadow: 0px 3px 4px 0 grey; }
 
-.footer-container {
+.footer-container .container {
+  width: 100vw;
+  padding-top: 20px;
+  padding-bottom: 20px;
   background-color: #323232;
-  height: 180px;
   display: flex;
-  flex-wrap: wrap; }
-  .footer-container .logo-white {
+  justify-content: center; }
+  .footer-container .container .logo-white {
+    height: 10vh;
+    width: 85vw;
     background-image: url("./components/images/ultraTreningLogo1White.svg");
-    background-size: 320px 120px;
+    background-size: contain;
     background-position: center;
-    background-repeat: no-repeat;
-    height: 140px;
-    width: 340px; }
-  .footer-container .copy-rights {
-    font-size: 15px;
-    color: white;
-    height: 50px;
-    width: 120px; }
+    background-repeat: no-repeat; }
+    @media (min-width: 600px) {
+      .footer-container .container .logo-white {
+        height: 15vh; } }
+  .footer-container .container .socials {
+    margin-top: 2vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; }
+    .footer-container .container .socials .fb {
+      margin-left: 10px;
+      height: 50px;
+      width: 50px;
+      background-size: cover;
+      background-image: url("./components/images/fb-icon.svg");
+      background-position: center; }
+      @media (min-width: 600px) {
+        .footer-container .container .socials .fb {
+          margin-left: 15px;
+          height: 60px;
+          width: 60px; } }
+    .footer-container .container .socials .pin {
+      margin-left: 10px;
+      height: 50px;
+      width: 50px;
+      background-size: cover;
+      background-image: url("./components/images/pin-icon.svg");
+      background-position: center; }
+      @media (min-width: 600px) {
+        .footer-container .container .socials .pin {
+          margin-left: 15px;
+          height: 60px;
+          width: 60px; } }
+    .footer-container .container .socials .lin {
+      margin-left: 10px;
+      height: 50px;
+      width: 50px;
+      background-size: cover;
+      background-image: url("./components/images/lin-icon.svg");
+      background-position: center; }
+      @media (min-width: 600px) {
+        .footer-container .container .socials .lin {
+          margin-left: 15px;
+          height: 60px;
+          width: 60px; } }
+    .footer-container .container .socials .g {
+      margin-left: 10px;
+      height: 50px;
+      width: 50px;
+      background-size: cover;
+      background-image: url("./components/images/g-icon.svg");
+      background-position: center; }
+      @media (min-width: 600px) {
+        .footer-container .container .socials .g {
+          margin-left: 15px;
+          height: 60px;
+          width: 60px; } }
+
+.footer-container .copy-rights {
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  color: white;
+  height: 50px;
+  width: 100vw; }
 
 .container {
   width: 100%;
