--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -1,23 +1,35 @@
+
+//menu icon
+$menu-SVG:  url("./components/images/menuBtn.svg");
+
+//top arrow
+$arrowTop-SVG: url("./components/images/arrowTop.svg");
+
+//colors
 $main-color: rgba(0,237,0,255);
 $main-color-opacity: rgba(0,237,0,0.8);
 $main-color-opacity-more: rgba(0,237,0,0.4);
 $main-color-hover: rgba(100,100,100,0.8);
 $main-color2: rgba(70,70,70,0.8);
+
+//font style
 $main-font: 'Lato',Georgia, "Times New Roman", Times, serif;
+
+//logos
 $logo-SVG: url("./components/images/ultraTreningLogo1.svg") ;
 $logoWhite-SVG: url("./components/images/ultraTreningLogo1White.svg") ;
 $logo-SVG2: url("./components/images/ultraTreningLogo2.svg");
 $logoWhite-SVG2: url("./components/images/ultraTreningLogo2White.svg");
-$backgroundMain1-SVG: url("./components/images/backgroundMain1.svg");
 
+//background pics for home page and entry form
 $backgroundMainBridges-SVG: url("./components/images/bridge.jpg");
 $backgroundMainSunsetBike-SVG: url("./components/images/sunset-bike.jpg");
 
-
+//backgrounds
 $backgroundMain2-SVG: url("./components/images/backgroundMain2.svg");
 $backgroundsection2-SVG: url("./components/images/backgroundsection2.svg");
 $backgroundsection4-SVG: url("./components/images/backgroundsection4.svg");
-$broadBelt-SVG: url("./components/images/roadBelt.svg");
+$backgroundMain1-SVG: url("./components/images/backgroundMain1.svg");
 
 //advantage dots
 $advantageCalendar-SVG: url("./components/images/advantageCalendar.svg");
@@ -29,15 +41,8 @@ $diagram-SVG: url("./components/images/diagram.svg");
 $leisureTime-SVG: url("./components/images/leisureTime.svg");
 $periods-SVG: url("./components/images/periods.svg");
 
+//breaks
 $break-to-adv-SVG: url("./components/images/break-to-adv.svg");
 $break-to-enco-SVG: url("./components/images/break-to-enco.svg");
 $break-to-advMobile-SVG: url("./components/images/break-to-advMobile.svg");
 $break-to-encoMobile-SVG: url("./components/images/break-to-encoMobile.svg");
-
-$arrowTop-SVG: url("./components/images/arrowTop.svg");
-$more-SVG: url("./components/images/more.svg");
-$menu-SVG:  url("./components/images/menuBtn.svg");
-// $nav-mobile-height: 30px;
-// $nav-mobile-heightmargin: 16px;
-// $nav-mobile-heightplusmargin: 56px;
-// $side-nav-right: -110px;
