--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -2,24 +2,63 @@
 @import "../modules/mixins";
 
 .footer-container{
-  background-color: rgba(50,50,50,1);
-  // color: rgba(40,40,40,1);
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
 
-  height: 180px;
-  display: flex;
-  flex-wrap: wrap;
+  .container{
+    width: 100vw;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: rgba(50,50,50,1);
+    display: flex;
+    justify-content: center;
     .logo-white{
-    background-image: $logoWhite-SVG;
-    background-size:320px 120px;
-    background-position: center;
-    background-repeat: no-repeat;;
-    height: 140px;
-    width: 340px;
-  }
-    .copy-rights{
+      height: 10vh;
+      width: 85vw;
+      // border: 1px solid yellow;
+      background-image: $logoWhite-SVG;
+      background-size:contain;
+      background-position: center;
+      background-repeat: no-repeat;
+      @include mobile{
+        height: 15vh;
+      };
+    }//end of logo-white
+
+    .socials{
+      margin-top: 2vh;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      // border: 1px solid blue;
+
+      @each $i in fb,pin,lin,g{
+        .#{$i}{
+          margin-left: 10px;
+          height: 50px;
+          width: 50px;
+          // border: 1px solid orange;
+          background-size:cover;
+          background-image:url("./components/images/#{$i}-icon.svg");
+          background-position: center;
+          @include mobile{
+            margin-left: 15px;
+            height: 60px;
+            width: 60px;          };
+        }
+      }//snd of each social
+    }//end of socials
+  }//and oc container
+
+  .copy-rights{
+    background-color: rgba(0,0,0,1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 15px;
     color:white;
     height: 50px;
-    width: 120px;
+    width: 100vw;
   }
-}
+}// end of footer container
