--- a/src/scss/partials/homeStyle-partials/_fourthSection.scss
+++ b/src/scss/partials/homeStyle-partials/_fourthSection.scss
@@ -30,7 +30,8 @@
     width:190px;
     height:190px;
     margin: 10px;
-    background-color: $main-color-opacity;
+    // background-color: $main-color-opacity;
+      @include linearGradientEf(-45deg,rgba(0,228,0,0.8),rgba(0,228,0,0.8) 47%,$main-color-opacity 50%,$main-color-opacity 100%);
     display: flex;
     flex-direction: column;
     justify-content: center;
