finished entryform styling and beginnig of fillInForm styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 @import './scss/partials/footer';
 @import './scss/grid/grid';
 @import './scss/partials/entryFormStyle';
+@import './scss/partials/fillInStyle';  
 
 *{
   padding: 0px;
