--- a/src/App.css
+++ b/src/App.css
@@ -825,13 +825,196 @@
     flex-wrap: wrap; }
 
 #for-entry-bg {
-  background-image: url("./components/images/sunset-bike.jpg"); }
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  background-image: url("./components/images/backgroundMain1.svg"); }
 
 .form-cnt {
-  height: 60vh;
-  margin-top: 20vh;
-  margin-bottom: 20vh;
-  background-color: rgba(0, 233, 0, 0.4); }
+  width: 100%;
+  height: 64vh;
+  margin: 14vh 10vw 0vh 10vw;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center; }
+  @media (min-width: 600px) {
+    .form-cnt {
+      margin: 18vh 10vw -2vh 10vw;
+      width: 75%;
+      height: 62vh; } }
+  @media (min-width: 960px) {
+    .form-cnt {
+      margin: 15vh 10vw -2vh 10vw;
+      width: 65%;
+      height: 67vh; } }
+  @media (min-width: 768px) {
+    .form-cnt {
+      margin: 13vh 10vw -2vh 10vw;
+      width: 65%;
+      height: 70vh; } }
+  @media (min-width: 1200px) {
+    .form-cnt {
+      margin: 13vh 10vw -3vh 10vw;
+      width: 55%;
+      height: 70vh; } }
+  @media (min-width: 1440px) {
+    .form-cnt {
+      margin: 20vh 10vw 2vh 10vw;
+      width: 45%;
+      height: 58vh; } }
+  .form-cnt .entry-text {
+    text-align: center;
+    justify-content: center;
+    color: whitesmoke;
+    background-color: rgba(30, 30, 30, 0.4);
+    padding: 4px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size: 25px;
+    margin: 30px;
+    font-weight: bold; }
+    @media (min-width: 768px) {
+      .form-cnt .entry-text {
+        font-size: 35px; } }
+    @media (min-width: 960px) {
+      .form-cnt .entry-text {
+        font-size: 40px; } }
+  .form-cnt form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 40px;
+    color: #fafafa; }
+    .form-cnt form .errorClass {
+      border: 4px solid #00e900;
+      background-color: rgba(233, 200, 200, 0.9);
+      font-size: 20px; }
+    .form-cnt form input[type=text] {
+      padding-left: 8px;
+      font-size: 17px;
+      margin-top: 10px;
+      width: 240px;
+      height: 40px;
+      background-color: #fafafa;
+      border: 0px solid blue;
+      border-radius: 3%;
+      -webkit-box-shadow: 0px 0px 5px 0 #fafafa;
+      -moz-box-shadow: 0px 0px 5px 0 #fafafa;
+      -o-transform: 0px 0px 5px 0 #fafafa;
+      box-shadow: 0px 0px 5px 0 #fafafa; }
+      @media (min-width: 768px) {
+        .form-cnt form input[type=text] {
+          font-size: 19px;
+          margin-top: 14px;
+          width: 250px;
+          height: 44px; } }
+      @media (min-width: 960px) {
+        .form-cnt form input[type=text] {
+          font-size: 21px;
+          width: 280px;
+          height: 50px; } }
+      .form-cnt form input[type=text]:focus {
+        -webkit-box-shadow: 0px 0px 5px 0 #00e900;
+        -moz-box-shadow: 0px 0px 5px 0 #00e900;
+        -o-transform: 0px 0px 5px 0 #00e900;
+        box-shadow: 0px 0px 5px 0 #00e900;
+        border: 4px solid #00e900;
+        background-color: rgba(200, 233, 200, 0.9); }
+    .form-cnt form .errorTextActive {
+      font-size: 18px;
+      color: #fa140a;
+      font-weight: bold; }
+    .form-cnt form .errorTextNonActive {
+      font-size: 18px;
+      color: rgba(250, 20, 10, 0); }
+    .form-cnt form .txt-cnt {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      width: 240px;
+      font-size: 16px; }
+      .form-cnt form .txt-cnt .form-txt {
+        text-transform: uppercase;
+        margin-top: 10px; }
+        @media (min-width: 960px) {
+          .form-cnt form .txt-cnt .form-txt {
+            margin-top: 14px; } }
+    .form-cnt form input[type=submit] {
+      font-size: 19px;
+      text-transform: uppercase;
+      font-weight: bold;
+      color: white;
+      margin-top: 25px;
+      margin-bottom: 20px;
+      border-radius: 10px;
+      width: 200px;
+      height: 40px;
+      border: 0px solid blue;
+      border-radius: 2%;
+      background: repeating-linear-gradient(-10deg, #00d200, #00d200 47%, #00e600 50%, #00e600 100%);
+      background: -webkit-linear-gradient(-10deg, #00d200, #00d200 47%, #00e600 50%, #00e600 100%);
+      background: -o-linear-gradient(-10deg, #00d200, #00d200 47%, #00e600 50%, #00e600 100%);
+      background: -moz-linear-gradient(-10deg, #00d200, #00d200 47%, #00e600 50%, #00e600 100%); }
+      @media (min-width: 768px) {
+        .form-cnt form input[type=submit] {
+          margin-top: 27px;
+          width: 220px;
+          height: 44px; } }
+      @media (min-width: 960px) {
+        .form-cnt form input[type=submit] {
+          margin-top: 29px;
+          width: 250px;
+          height: 52px; } }
+      .form-cnt form input[type=submit]:hover {
+        background: repeating-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%);
+        background: -webkit-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%);
+        background: -o-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%);
+        background: -moz-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%); }
+      .form-cnt form input[type=submit]:focus {
+        -webkit-box-shadow: 0px 0px 7px 0 #00e900;
+        -moz-box-shadow: 0px 0px 7px 0 #00e900;
+        -o-transform: 0px 0px 7px 0 #00e900;
+        box-shadow: 0px 0px 7px 0 #00e900;
+        border: 0px solid blue;
+        background: repeating-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%);
+        background: -webkit-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%);
+        background: -o-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%);
+        background: -moz-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%); }
+
+.return-to-menu {
+  font-size: 19px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: white;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border-radius: 10px;
+  width: 242px;
+  height: 49px;
+  border: 0px solid blue;
+  border-radius: 2%;
+  background: repeating-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
+  background: -webkit-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
+  background: -o-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
+  background: -moz-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%); }
+
+#all-cnt {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  background-image: url("./components/images/backgroundMain1.svg"); }
+
+#fillInForm-cnt {
+  width: 100%;
+  height: 64vh;
+  margin: 14vh 10vw 0vh 10vw;
+  background-color: rgba(0, 0, 0, 0.7); }
 
 * {
   padding: 0px;
