--- a/src/scss/modules/_mixins.scss
+++ b/src/scss/modules/_mixins.scss
@@ -26,6 +26,19 @@ transition: $value;
 box-shadow: 0px 3px 4px 0 $color;
 }
 
+@mixin boxShadowEntry($color) {
+-webkit-box-shadow: 0px 0px 5px 0 $color;
+-moz-box-shadow: 0px 0px 5px 0 $color;
+-o-transform: 0px 0px 5px 0 $color;
+box-shadow: 0px 0px 5px 0 $color;
+}
+@mixin boxShadowEntrySubmit($color) {
+-webkit-box-shadow: 0px 0px 7px 0 $color;
+-moz-box-shadow: 0px 0px 7px 0 $color;
+-o-transform: 0px 0px 7px 0 $color;
+box-shadow: 0px 0px 7px 0 $color;
+}
+
 @mixin linearGradientEf($colors...){
 background: repeating-linear-gradient($colors);
 background: -webkit-linear-gradient($colors);
