--- a/src/App.css
+++ b/src/App.css
@@ -703,15 +703,16 @@
   display: flex;
   justify-content: center; }
   .footer-container .container .logo-white {
-    height: 10vh;
-    width: 85vw;
+    height: 8vh;
+    width: 65vw;
+    margin-left: 10vw;
     background-image: url("./components/images/ultraTreningLogo1White.svg");
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat; }
     @media (min-width: 600px) {
       .footer-container .container .logo-white {
-        height: 15vh; } }
+        height: 10vh; } }
   .footer-container .container .socials {
     margin-top: 2vh;
     display: flex;
@@ -1011,10 +1012,351 @@
   background-image: url("./components/images/backgroundMain1.svg"); }
 
 #fillInForm-cnt {
-  width: 100%;
-  height: 64vh;
-  margin: 14vh 10vw 0vh 10vw;
-  background-color: rgba(0, 0, 0, 0.7); }
+  height: 100vh;
+  width: 100vw;
+  margin: 48px 10vw 0vh 10vw;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fafafa; }
+  @media (min-width: 600px) {
+    #fillInForm-cnt {
+      height: 93vh; } }
+  @media (min-width: 768px) {
+    #fillInForm-cnt {
+      height: 90vh;
+      margin: 66px 10vw 0vh 10vw;
+      width: 800px; } }
+  @media (min-width: 1200px) {
+    #fillInForm-cnt {
+      margin: 72px 10vw 0vh 10vw; } }
+  #fillInForm-cnt .entry-text-FIF {
+    height: 6vh;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-top: 8px;
+    font-size: 30px;
+    font-weight: bold;
+    color: #fafafa;
+    width: 100vw;
+    background-color: rgba(30, 30, 30, 0.4); }
+    @media (min-width: 768px) {
+      #fillInForm-cnt .entry-text-FIF {
+        width: 800px; } }
+  #fillInForm-cnt .main-error-FIF-active {
+    display: flex;
+    justify-content: center;
+    font-size: 17px;
+    font-weight: bold;
+    color: #fafafa;
+    background-color: #fa1414;
+    width: 100vw;
+    padding: 1.9px;
+    margin-top: 3px; }
+    @media (min-width: 768px) {
+      #fillInForm-cnt .main-error-FIF-active {
+        width: 800px; } }
+  #fillInForm-cnt .main-error-FIF-nonactive {
+    margin-top: 3px;
+    padding: 1.9px;
+    font-size: 17px;
+    color: rgba(250, 250, 250, 0);
+    background-color: rgba(250, 250, 250, 0);
+    width: 100vw; }
+    @media (min-width: 768px) {
+      #fillInForm-cnt .main-error-FIF-nonactive {
+        width: 800px; } }
+  #fillInForm-cnt .inputs-cnts {
+    width: 100vw;
+    height: 8vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center; }
+    @media (min-width: 768px) {
+      #fillInForm-cnt .inputs-cnts {
+        width: 800px; } }
+    #fillInForm-cnt .inputs-cnts .descr-field {
+      font-size: 19px;
+      width: 120px; }
+    #fillInForm-cnt .inputs-cnts input[type=text], #fillInForm-cnt .inputs-cnts input[type=number], #fillInForm-cnt .inputs-cnts input[type=date], #fillInForm-cnt .inputs-cnts input[type=submit] {
+      padding-left: 5px;
+      font-size: 14px;
+      width: 214px;
+      height: 30px;
+      background-color: #fafafa;
+      border: 0px solid blue;
+      border-radius: 3%;
+      -webkit-box-shadow: 0px 0px 5px 0 #fafafa;
+      -moz-box-shadow: 0px 0px 5px 0 #fafafa;
+      -o-transform: 0px 0px 5px 0 #fafafa;
+      box-shadow: 0px 0px 5px 0 #fafafa; }
+      #fillInForm-cnt .inputs-cnts input[type=text]:focus, #fillInForm-cnt .inputs-cnts input[type=number]:focus, #fillInForm-cnt .inputs-cnts input[type=date]:focus, #fillInForm-cnt .inputs-cnts input[type=submit]:focus {
+        -webkit-box-shadow: 0px 0px 5px 0 #00e900;
+        -moz-box-shadow: 0px 0px 5px 0 #00e900;
+        -o-transform: 0px 0px 5px 0 #00e900;
+        box-shadow: 0px 0px 5px 0 #00e900;
+        border: 1px solid #00e900;
+        background-color: rgba(200, 233, 200, 0.9); }
+    #fillInForm-cnt .inputs-cnts .single-down-error-FIF-nonactive {
+      text-align: center;
+      width: 100%;
+      height: 14px;
+      font-size: 12px;
+      font-weight: bold;
+      text-transform: uppercase;
+      background-color: rgba(250, 10, 10, 0);
+      color: rgba(250, 250, 250, 0); }
+      @media (min-width: 768px) {
+        #fillInForm-cnt .inputs-cnts .single-down-error-FIF-nonactive {
+          width: 800px; } }
+    #fillInForm-cnt .inputs-cnts .single-down-error-FIF-active {
+      text-align: center;
+      width: 100%;
+      height: 14px;
+      font-size: 12px;
+      font-weight: bold;
+      text-transform: uppercase;
+      background-color: #fa0a0a;
+      color: #fafafa; }
+      @media (min-width: 768px) {
+        #fillInForm-cnt .inputs-cnts .single-down-error-FIF-active {
+          width: 800px; } }
+    #fillInForm-cnt .inputs-cnts .zindex20 {
+      position: relative;
+      z-index: 20; }
+    #fillInForm-cnt .inputs-cnts .formSuggestion-cnt {
+      width: 100%; }
+      @media (min-width: 768px) {
+        #fillInForm-cnt .inputs-cnts .formSuggestion-cnt {
+          width: 800px; } }
+      #fillInForm-cnt .inputs-cnts .formSuggestion-cnt .formSuggestion {
+        text-align: center;
+        width: 100%;
+        height: 14px;
+        font-size: 12px;
+        font-weight: bold;
+        margin-top: -21.1px;
+        text-transform: uppercase;
+        background-color: #6464fa;
+        color: #fafafa; }
+        @media (min-width: 768px) {
+          #fillInForm-cnt .inputs-cnts .formSuggestion-cnt .formSuggestion {
+            width: 800px; } }
+      #fillInForm-cnt .inputs-cnts .formSuggestion-cnt .zindex30 {
+        position: relative;
+        z-index: 30; }
+  #fillInForm-cnt .select-cnt {
+    width: 100vw;
+    height: 9vh;
+    background-color: rgba(30, 30, 30, 0.4);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center; }
+    @media (min-width: 768px) {
+      #fillInForm-cnt .select-cnt {
+        height: 47px;
+        width: 800px; } }
+    #fillInForm-cnt .select-cnt .descr-select {
+      width: 100vw;
+      text-align: center;
+      font-size: 20px; }
+      @media (min-width: 768px) {
+        #fillInForm-cnt .select-cnt .descr-select {
+          width: 400px;
+          margin-top: 10px; } }
+    #fillInForm-cnt .select-cnt input {
+      margin-left: 7px;
+      margin-bottom: 7px; }
+      @media (min-width: 768px) {
+        #fillInForm-cnt .select-cnt input {
+          margin-top: 15px; } }
+    #fillInForm-cnt .select-cnt .options-select {
+      font-size: 16px;
+      margin-left: 7px; }
+    #fillInForm-cnt .select-cnt .single-down-error-FIF-active {
+      text-align: center;
+      width: 100%;
+      height: 14px;
+      font-size: 12px;
+      font-weight: bold;
+      text-transform: uppercase;
+      background-color: #fa0a0a;
+      color: #fafafa; }
+      @media (min-width: 768px) {
+        #fillInForm-cnt .select-cnt .single-down-error-FIF-active {
+          width: 800px; } }
+    #fillInForm-cnt .select-cnt .single-down-error-FIF-nonactive {
+      text-align: center;
+      width: 100%;
+      height: 12px;
+      font-size: 10px;
+      font-weight: bold;
+      text-transform: uppercase;
+      background-color: rgba(250, 10, 10, 0);
+      color: rgba(250, 250, 250, 0); }
+      @media (min-width: 768px) {
+        #fillInForm-cnt .select-cnt .single-down-error-FIF-nonactive {
+          width: 800px; } }
+  #fillInForm-cnt #btns-cnt-FIF {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; }
+    @media (min-width: 768px) {
+      #fillInForm-cnt #btns-cnt-FIF {
+        width: 800px; } }
+    #fillInForm-cnt #btns-cnt-FIF #weeks-propt {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      flex-direction: row;
+      align-items: center;
+      margin: 7px 0 5px 0; }
+      @media (min-width: 768px) {
+        #fillInForm-cnt #btns-cnt-FIF #weeks-propt {
+          margin: 0px 0 5px 0;
+          width: 800px; } }
+      #fillInForm-cnt #btns-cnt-FIF #weeks-propt #weeks-no-propt-btn {
+        font-size: 11px;
+        text-transform: uppercase;
+        font-weight: bold;
+        color: white;
+        margin: 0 10px 0 0;
+        border-radius: 10px;
+        width: 105px;
+        height: 35px;
+        border: 1px solid black;
+        border-radius: 2%;
+        background: repeating-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
+        background: -webkit-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
+        background: -o-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
+        background: -moz-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%); }
+        #fillInForm-cnt #btns-cnt-FIF #weeks-propt #weeks-no-propt-btn:hover {
+          background: repeating-linear-gradient(-10deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) 47%, rgba(40, 40, 40, 0.7) 50%, rgba(40, 40, 40, 0.7) 100%);
+          background: -webkit-linear-gradient(-10deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) 47%, rgba(40, 40, 40, 0.7) 50%, rgba(40, 40, 40, 0.7) 100%);
+          background: -o-linear-gradient(-10deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) 47%, rgba(40, 40, 40, 0.7) 50%, rgba(40, 40, 40, 0.7) 100%);
+          background: -moz-linear-gradient(-10deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) 47%, rgba(40, 40, 40, 0.7) 50%, rgba(40, 40, 40, 0.7) 100%); }
+        #fillInForm-cnt #btns-cnt-FIF #weeks-propt #weeks-no-propt-btn:focus {
+          -webkit-box-shadow: 0px 0px 7px 0 #000ad2;
+          -moz-box-shadow: 0px 0px 7px 0 #000ad2;
+          -o-transform: 0px 0px 7px 0 #000ad2;
+          box-shadow: 0px 0px 7px 0 #000ad2;
+          border: 1px solid black;
+          background: repeating-linear-gradient(-10deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9) 47%, rgba(40, 40, 40, 0.9) 50%, rgba(40, 40, 40, 0.9) 100%);
+          background: -webkit-linear-gradient(-10deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9) 47%, rgba(40, 40, 40, 0.9) 50%, rgba(40, 40, 40, 0.9) 100%);
+          background: -o-linear-gradient(-10deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9) 47%, rgba(40, 40, 40, 0.9) 50%, rgba(40, 40, 40, 0.9) 100%);
+          background: -moz-linear-gradient(-10deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9) 47%, rgba(40, 40, 40, 0.9) 50%, rgba(40, 40, 40, 0.9) 100%); }
+      #fillInForm-cnt #btns-cnt-FIF #weeks-propt #weeks-no-propt {
+        width: 80px;
+        height: 35px;
+        background: repeating-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
+        background: -webkit-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
+        background: -o-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
+        background: -moz-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+    #fillInForm-cnt #btns-cnt-FIF #render-plan-btn {
+      font-size: 19px;
+      text-transform: uppercase;
+      font-weight: bold;
+      color: white;
+      margin: 5px 0 5px 0;
+      border-radius: 10px;
+      width: 200px;
+      height: 36px;
+      border: 0px solid blue;
+      border-radius: 2%;
+      background: repeating-linear-gradient(-10deg, #00d200, #00d200 47%, #00e600 50%, #00e600 100%);
+      background: -webkit-linear-gradient(-10deg, #00d200, #00d200 47%, #00e600 50%, #00e600 100%);
+      background: -o-linear-gradient(-10deg, #00d200, #00d200 47%, #00e600 50%, #00e600 100%);
+      background: -moz-linear-gradient(-10deg, #00d200, #00d200 47%, #00e600 50%, #00e600 100%); }
+      @media (min-width: 768px) {
+        #fillInForm-cnt #btns-cnt-FIF #render-plan-btn {
+          margin: 8px 0 5px 0;
+          width: 240px;
+          height: 50px; } }
+      #fillInForm-cnt #btns-cnt-FIF #render-plan-btn:hover {
+        background: repeating-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%);
+        background: -webkit-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%);
+        background: -o-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%);
+        background: -moz-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%); }
+      #fillInForm-cnt #btns-cnt-FIF #render-plan-btn:focus {
+        -webkit-box-shadow: 0px 0px 7px 0 #00e900;
+        -moz-box-shadow: 0px 0px 7px 0 #00e900;
+        -o-transform: 0px 0px 7px 0 #00e900;
+        box-shadow: 0px 0px 7px 0 #00e900;
+        border: 0px solid blue;
+        background: repeating-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%);
+        background: -webkit-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%);
+        background: -o-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%);
+        background: -moz-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%); }
+
+#returnToMenu-FIF {
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: white;
+  margin: 40px 0 40px 0;
+  border-radius: 10px;
+  width: 150px;
+  height: 30px;
+  border: 0px solid blue;
+  border-radius: 2%;
+  background: repeating-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
+  background: -webkit-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
+  background: -o-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
+  background: -moz-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%); }
+  @media (min-width: 768px) {
+    #returnToMenu-FIF {
+      font-size: 19px;
+      width: 240px;
+      height: 50px; } }
+
+.notEnoughTimeToPrepareWarningDiv {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  z-index: 50;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; }
+  .notEnoughTimeToPrepareWarningDiv .areyousure-txt {
+    font-size: 8vh;
+    font-weight: bold;
+    color: #fafafa; }
+  .notEnoughTimeToPrepareWarningDiv .return-fillInForm-btn {
+    font-size: 3vh;
+    font-weight: bold;
+    color: white;
+    margin: 40px 0 40px 0;
+    border-radius: 10px;
+    width: 300px;
+    height: 80px;
+    border: 0px solid blue;
+    border-radius: 2%;
+    background: repeating-linear-gradient(-10deg, #f00a0a, #f00a0a 47%, #e60a0a 50%, #e60a0a 100%);
+    background: -webkit-linear-gradient(-10deg, #f00a0a, #f00a0a 47%, #e60a0a 50%, #e60a0a 100%);
+    background: -o-linear-gradient(-10deg, #f00a0a, #f00a0a 47%, #e60a0a 50%, #e60a0a 100%);
+    background: -moz-linear-gradient(-10deg, #f00a0a, #f00a0a 47%, #e60a0a 50%, #e60a0a 100%); }
+  .notEnoughTimeToPrepareWarningDiv .load-trainingPlan-btn {
+    font-size: 3vh;
+    font-weight: bold;
+    color: white;
+    margin: 40px 0 40px 0;
+    border-radius: 10px;
+    width: 300px;
+    height: 80px;
+    border: 0px solid blue;
+    border-radius: 2%;
+    background: repeating-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%);
+    background: -webkit-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%);
+    background: -o-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%);
+    background: -moz-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%); }
 
 * {
   padding: 0px;
