training plan  styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
 @import './scss/grid/grid';
 @import './scss/partials/entryFormStyle';
 @import './scss/partials/fillInFormStyle';  
+@import './scss/partials/trainingPlanStyle';
 
 *{
   padding: 0px;
