--- a/src/scss/partials/_fillInFormStyle.scss
+++ b/src/scss/partials/_fillInFormStyle.scss
@@ -371,12 +371,12 @@
   justify-content: center;
   flex-direction: column;
   .areyousure-txt{
-    font-size: 8vh;
+    font-size: 8vw;
     font-weight: bold;
     color: rgba(250,250,250,1)
   }
   .return-fillInForm-btn{
-    font-size: 3vh;
+    font-size: 3vw;
     // text-transform: uppercase;
     font-weight: bold;
     color: rgba(255,255,255,1);
@@ -391,7 +391,7 @@
 
   }
   .load-trainingPlan-btn{
-    font-size: 3vh;
+    font-size: 3vw;
     // text-transform: uppercase;
     font-weight: bold;
     color: rgba(255,255,255,1);
