--- a/src/App.css
+++ b/src/App.css
@@ -1326,11 +1326,11 @@
   justify-content: center;
   flex-direction: column; }
   .notEnoughTimeToPrepareWarningDiv .areyousure-txt {
-    font-size: 8vh;
+    font-size: 8vw;
     font-weight: bold;
     color: #fafafa; }
   .notEnoughTimeToPrepareWarningDiv .return-fillInForm-btn {
-    font-size: 3vh;
+    font-size: 3vw;
     font-weight: bold;
     color: white;
     margin: 40px 0 40px 0;
@@ -1344,7 +1344,7 @@
     background: -o-linear-gradient(-10deg, #f00a0a, #f00a0a 47%, #e60a0a 50%, #e60a0a 100%);
     background: -moz-linear-gradient(-10deg, #f00a0a, #f00a0a 47%, #e60a0a 50%, #e60a0a 100%); }
   .notEnoughTimeToPrepareWarningDiv .load-trainingPlan-btn {
-    font-size: 3vh;
+    font-size: 3vw;
     font-weight: bold;
     color: white;
     margin: 40px 0 40px 0;
@@ -1357,6 +1357,53 @@
     background: -webkit-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%);
     background: -o-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%);
     background: -moz-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%); }
+
+#training-plan-bg {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  background-image: url("./components/images/backgroundMain1.svg"); }
+
+#training-plan-cnt {
+  margin-top: 46px;
+  width: 95vw;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fdfdfd; }
+  @media (min-width: 600px) {
+    #training-plan-cnt {
+      width: 90vw; } }
+  @media (min-width: 768px) {
+    #training-plan-cnt {
+      width: 80vw;
+      margin: 66px 10vw 0vh 10vw; } }
+  @media (min-width: 1200px) {
+    #training-plan-cnt {
+      margin: 72px 10vw 0vh 10vw; } }
+  #training-plan-cnt .side-btns-td {
+    writing-mode: vertical-lr;
+    text-orientation: sideways-right;
+    background-color: #00ed00;
+    width: 30px;
+    height: 70px;
+    font-size: 15px;
+    color: black;
+    font-weight: 600;
+    position: fixed;
+    right: 0;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    -webkit-box-shadow: 0px 3px 4px 0 grey;
+    -moz-box-shadow: 0px 3px 4px 0 grey;
+    -o-transform: 0px 3px 4px 0 grey;
+    box-shadow: 0px 3px 4px 0 grey; }
+  #training-plan-cnt #save-btn {
+    top: 30vh; }
+  #training-plan-cnt #remove-tr-btn {
+    top: 45vh;
+    height: 70px; }
 
 * {
   padding: 0px;
