--- a/src/App.css
+++ b/src/App.css
@@ -1004,6 +1004,129 @@
   background: -o-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
   background: -moz-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%); }
 
+.select-cnt {
+  width: 100vw;
+  height: 9vh;
+  background-color: rgba(30, 30, 30, 0.4);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center; }
+  @media (min-width: 768px) {
+    .select-cnt {
+      height: 47px;
+      width: 800px; } }
+  .select-cnt .descr-select {
+    width: 100vw;
+    text-align: center;
+    font-size: 20px; }
+    @media (min-width: 768px) {
+      .select-cnt .descr-select {
+        width: 400px;
+        margin-top: 10px; } }
+  .select-cnt input {
+    margin-left: 7px;
+    margin-bottom: 7px; }
+    @media (min-width: 768px) {
+      .select-cnt input {
+        margin-top: 15px; } }
+  .select-cnt .options-select {
+    font-size: 16px;
+    margin-left: 7px; }
+  .select-cnt .single-down-error-FIF-active {
+    text-align: center;
+    width: 100%;
+    height: 14px;
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+    background-color: #fa0a0a;
+    color: #fafafa; }
+    @media (min-width: 768px) {
+      .select-cnt .single-down-error-FIF-active {
+        width: 800px; } }
+  .select-cnt .single-down-error-FIF-nonactive {
+    text-align: center;
+    width: 100%;
+    height: 12px;
+    font-size: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+    background-color: rgba(250, 10, 10, 0);
+    color: rgba(250, 250, 250, 0); }
+    @media (min-width: 768px) {
+      .select-cnt .single-down-error-FIF-nonactive {
+        width: 800px; } }
+
+.notEnoughTimeToPrepareWarningDiv {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  z-index: 50;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; }
+  .notEnoughTimeToPrepareWarningDiv .areyousure-txt {
+    font-size: 38px;
+    font-weight: bold;
+    color: #fafafa; }
+    .notEnoughTimeToPrepareWarningDiv .areyousure-txt p {
+      margin-left: 8vw; }
+      @media (min-width: 960px) {
+        .notEnoughTimeToPrepareWarningDiv .areyousure-txt p {
+          margin-left: 0; } }
+  .notEnoughTimeToPrepareWarningDiv .return-fillInForm-btn {
+    font-size: 22px;
+    font-weight: bold;
+    color: white;
+    margin: 40px 0 40px 0;
+    border-radius: 10px;
+    width: 300px;
+    height: 80px;
+    border: 0px solid blue;
+    border-radius: 2%;
+    background: repeating-linear-gradient(-10deg, #f00a0a, #f00a0a 47%, #e60a0a 50%, #e60a0a 100%);
+    background: -webkit-linear-gradient(-10deg, #f00a0a, #f00a0a 47%, #e60a0a 50%, #e60a0a 100%);
+    background: -o-linear-gradient(-10deg, #f00a0a, #f00a0a 47%, #e60a0a 50%, #e60a0a 100%);
+    background: -moz-linear-gradient(-10deg, #f00a0a, #f00a0a 47%, #e60a0a 50%, #e60a0a 100%); }
+  .notEnoughTimeToPrepareWarningDiv .load-trainingPlan-btn {
+    font-size: 22px;
+    font-weight: bold;
+    color: white;
+    margin: 40px 0 40px 0;
+    border-radius: 10px;
+    width: 300px;
+    height: 80px;
+    border: 0px solid blue;
+    border-radius: 2%;
+    background: repeating-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%);
+    background: -webkit-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%);
+    background: -o-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%);
+    background: -moz-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%); }
+
+#returnToMenu-FIF {
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: white;
+  margin: 40px 0 40px 0;
+  border-radius: 10px;
+  width: 150px;
+  height: 30px;
+  border: 0px solid blue;
+  border-radius: 2%;
+  background: repeating-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
+  background: -webkit-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
+  background: -o-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
+  background: -moz-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%); }
+  @media (min-width: 768px) {
+    #returnToMenu-FIF {
+      font-size: 19px;
+      width: 240px;
+      height: 50px; } }
+
 #all-cnt {
   display: flex;
   flex-wrap: wrap;
@@ -1145,59 +1268,6 @@
       #fillInForm-cnt .inputs-cnts .formSuggestion-cnt .zindex30 {
         position: relative;
         z-index: 30; }
-  #fillInForm-cnt .select-cnt {
-    width: 100vw;
-    height: 9vh;
-    background-color: rgba(30, 30, 30, 0.4);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center; }
-    @media (min-width: 768px) {
-      #fillInForm-cnt .select-cnt {
-        height: 47px;
-        width: 800px; } }
-    #fillInForm-cnt .select-cnt .descr-select {
-      width: 100vw;
-      text-align: center;
-      font-size: 20px; }
-      @media (min-width: 768px) {
-        #fillInForm-cnt .select-cnt .descr-select {
-          width: 400px;
-          margin-top: 10px; } }
-    #fillInForm-cnt .select-cnt input {
-      margin-left: 7px;
-      margin-bottom: 7px; }
-      @media (min-width: 768px) {
-        #fillInForm-cnt .select-cnt input {
-          margin-top: 15px; } }
-    #fillInForm-cnt .select-cnt .options-select {
-      font-size: 16px;
-      margin-left: 7px; }
-    #fillInForm-cnt .select-cnt .single-down-error-FIF-active {
-      text-align: center;
-      width: 100%;
-      height: 14px;
-      font-size: 12px;
-      font-weight: bold;
-      text-transform: uppercase;
-      background-color: #fa0a0a;
-      color: #fafafa; }
-      @media (min-width: 768px) {
-        #fillInForm-cnt .select-cnt .single-down-error-FIF-active {
-          width: 800px; } }
-    #fillInForm-cnt .select-cnt .single-down-error-FIF-nonactive {
-      text-align: center;
-      width: 100%;
-      height: 12px;
-      font-size: 10px;
-      font-weight: bold;
-      text-transform: uppercase;
-      background-color: rgba(250, 10, 10, 0);
-      color: rgba(250, 250, 250, 0); }
-      @media (min-width: 768px) {
-        #fillInForm-cnt .select-cnt .single-down-error-FIF-nonactive {
-          width: 800px; } }
   #fillInForm-cnt #btns-cnt-FIF {
     width: 100%;
     display: flex;
@@ -1293,27 +1363,6 @@
         background: -webkit-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%);
         background: -o-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%);
         background: -moz-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%); }
-
-#returnToMenu-FIF {
-  font-size: 14px;
-  text-transform: uppercase;
-  font-weight: bold;
-  color: white;
-  margin: 40px 0 40px 0;
-  border-radius: 10px;
-  width: 150px;
-  height: 30px;
-  border: 0px solid blue;
-  border-radius: 2%;
-  background: repeating-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
-  background: -webkit-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
-  background: -o-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%);
-  background: -moz-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%); }
-  @media (min-width: 768px) {
-    #returnToMenu-FIF {
-      font-size: 19px;
-      width: 240px;
-      height: 50px; } }
 
 .notEnoughTimeToPrepareWarningDiv {
   width: 100vw;
@@ -1499,55 +1548,6 @@
           width: 820px;
           padding: 6px 0px 0px 10px;
           margin-left: 19px; } }
-
-.saveRemoveCNT {
-  top: 0;
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
-  z-index: 50;
-  background-color: rgba(0, 0, 0, 0.6);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column; }
-  .saveRemoveCNT .saveRemove-txt {
-    font-size: 38px;
-    font-weight: bold;
-    color: #fafafa; }
-    .saveRemoveCNT .saveRemove-txt p {
-      margin-left: 8vw; }
-      @media (min-width: 960px) {
-        .saveRemoveCNT .saveRemove-txt p {
-          margin-left: 0; } }
-  .saveRemoveCNT .remove-btn {
-    font-size: 22px;
-    font-weight: bold;
-    color: white;
-    margin: 40px 0 40px 0;
-    border-radius: 10px;
-    width: 300px;
-    height: 80px;
-    border: 0px solid blue;
-    border-radius: 2%;
-    background: repeating-linear-gradient(-10deg, #f00a0a, #f00a0a 47%, #e60a0a 50%, #e60a0a 100%);
-    background: -webkit-linear-gradient(-10deg, #f00a0a, #f00a0a 47%, #e60a0a 50%, #e60a0a 100%);
-    background: -o-linear-gradient(-10deg, #f00a0a, #f00a0a 47%, #e60a0a 50%, #e60a0a 100%);
-    background: -moz-linear-gradient(-10deg, #f00a0a, #f00a0a 47%, #e60a0a 50%, #e60a0a 100%); }
-  .saveRemoveCNT .save-btn {
-    font-size: 22px;
-    font-weight: bold;
-    color: white;
-    margin: 40px 0 40px 0;
-    border-radius: 10px;
-    width: 300px;
-    height: 80px;
-    border: 0px solid blue;
-    border-radius: 2%;
-    background: repeating-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%);
-    background: -webkit-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%);
-    background: -o-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%);
-    background: -moz-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%); }
 
 * {
   padding: 0px;
