--- a/src/scss/partials/_fillInFormStyle.scss
+++ b/src/scss/partials/_fillInFormStyle.scss
@@ -1,6 +1,9 @@
 @import '../modules/variables';
 @import '../modules/mixins';
 @import "../modules/mediaQueryMixins";
+@import "./fillInForm-partials/selectSection";
+@import "./common-partials/fullScreenWarningsStyles";
+@import "./common-partials/returnToMenuBtnStyle";
 
 
 #all-cnt{
@@ -8,7 +11,6 @@
   flex-wrap: wrap;
   align-items: center;
   flex-direction: column;
-  // justify-content: center;
   background-image: $backgroundMain1-SVG;
 }
 
@@ -47,7 +49,6 @@
   }
   .main-error-FIF-active{
     display: flex;
-    // flex-wrap: wrap;
     justify-content: center;
     font-size: 17px;
     font-weight: bold;
@@ -76,8 +77,6 @@
     // border: 1px solid blue;
     width: 100vw;
     height: 8vh;
-    // margin: 0 0 0 0;
-    // background-color: rgba(90,90,90,0.7);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -88,29 +87,16 @@
     .descr-field{
       font-size: 19px;
       width:120px;
-      // background-color: green;
     }
     input[type=text], input[type=number], input[type=date],input[type=submit]{
       padding-left: 5px;
       font-size: 14px;
-      // margin-top: 10px;
       width: 214px;
       height: 30px;
       background-color: rgba(250,250,250,1);
       border: 0px solid blue;
       border-radius: 3%;
       @include boxShadowEntry(rgba(250,250,250,1));
-      @include tablet{
-        // font-size: 19px;
-        // // margin-top: 14px;
-        // width: 250px;
-        // height: 44px;
-      };
-      @include mobile2{
-        // font-size: 21px;
-        // width: 280px;
-        // height: 50px;
-      };
       &:focus{
         @include boxShadowEntry(rgba(0,233,0,1));
         border: 1px solid rgba(0,233,0,1);
@@ -173,66 +159,6 @@
     }
   }//end of input cnt
 
-  .select-cnt{
-    width: 100vw;
-    height: 9vh;
-    background-color: rgba(30,30,30,0.4);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    @include tablet{
-      height: 47px;
-      width: 800px;
-    };
-    .descr-select{
-      width: 100vw;
-      text-align: center;
-      font-size: 20px;
-      @include tablet{
-        width: 400px;
-        margin-top: 10px;
-      };
-    }
-    input{
-      margin-left: 7px;
-      margin-bottom: 7px;
-      @include tablet{
-        margin-top: 15px;
-      };
-    }
-    .options-select{
-      font-size: 16px;
-      margin-left: 7px;
-
-    }
-    .single-down-error-FIF-active{
-      text-align: center;
-      width:100%;
-      height: 14px;
-      font-size: 12px;
-      font-weight: bold;
-      text-transform: uppercase;
-      background-color: rgba(250,10,10,1);
-      color: rgba(250,250,250,1);
-      @include tablet{
-        width: 800px;
-      };
-    }
-    .single-down-error-FIF-nonactive{
-      text-align: center;
-      width:100%;
-      height: 12px;
-      font-size: 10px;
-      font-weight: bold;
-      text-transform: uppercase;
-      background-color: rgba(250,10,10,0);
-      color: rgba(250,250,250,0);
-      @include tablet{
-        width: 800px;
-      };
-    }
-  }//end of select cnt
 
   #btns-cnt-FIF{
     width:100%;
@@ -245,7 +171,6 @@
     };
     #weeks-propt{
       width: 100%;
-      // background-color: yellow;
       display: flex;
       justify-content: center;
       flex-direction: row;
@@ -268,16 +193,6 @@
         border: 1px solid black;
         border-radius: 2%;
         @include linearGradientEf(-10deg,rgba(0,0,0,1),rgba(0,0,0,1) 47%,rgba(40,40,40,1) 50%,rgba(40,40,40,1) 100%);
-        @include tablet{
-          // margin-top: 27px;
-          // width: 220px;
-          // height: 44px;
-        };
-        @include mobile2{
-          // margin-top: 29px;
-          // width: 250px;
-          // height: 52px;
-        };
         &:hover{
           @include linearGradientEf(-10deg,rgba(0,0,0,0.7),rgba(0,0,0,0.7) 47%,rgba(40,40,40,0.7) 50%,rgba(40,40,40,0.7) 100%);
         }
@@ -314,11 +229,6 @@
         width: 240px;
         height: 50px;
       };
-      @include mobile2{
-        // margin-top: 29px;
-        // width: 250px;
-        // height: 52px;
-      };
       &:hover{
         @include linearGradientEf(-10deg,rgba(0,210,0,0.8),rgba(0,210,0,0.8) 47%,rgba(0,230,0,0.8) 50%,rgba(0,230,0,0.8) 100%);
       }
@@ -328,87 +238,5 @@
         @include linearGradientEf(-10deg,rgba(0,210,0,0.8),rgba(0,210,0,0.8) 47%,rgba(0,230,0,0.8) 50%,rgba(0,230,0,0.8) 100%);
       }
     }//emd of #render-plan-btn
-
   }
-
-
-
 }//end of FIF cnt
-
-
-
-#returnToMenu-FIF{
-    // border: 1px solid pink;
-    font-size: 14px;
-    text-transform: uppercase;
-    font-weight: bold;
-    color: rgba(255,255,255,1);
-    margin: 40px 0 40px 0;
-    border-radius: 10px;
-    width: 150px;
-    height: 30px;
-    // background-color: $main-color;
-    border: 0px solid blue;
-    border-radius: 2%;
-    @include linearGradientEf(-10deg,rgba(0,0,0,1),rgba(0,0,0,1) 47%,rgba(40,40,40,1) 50%,rgba(40,40,40,1) 100%);
-    @include tablet{
-      font-size: 19px;
-      width: 240px;
-      height: 50px;
-    };
-}//end of returnToMenu-FIF
-
-
-
-.notEnoughTimeToPrepareWarningDiv{
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
-  z-index: 50;
-  background-color: rgba(0,0,0,0.6);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  .areyousure-txt{
-    font-size: 38px;
-    font-weight: bold;
-    color: rgba(250,250,250,1);
-    p{
-      margin-left: 8vw;
-      @include mobile2{
-        margin-left: 0;
-      };
-    }
-  }
-  .return-fillInForm-btn{
-    font-size: 22px;
-    // text-transform: uppercase;
-    font-weight: bold;
-    color: rgba(255,255,255,1);
-    margin: 40px 0 40px 0;
-    border-radius: 10px;
-    width: 300px;
-    height: 80px;
-    // background-color: $main-color;
-    border: 0px solid blue;
-    border-radius: 2%;
-    @include linearGradientEf(-10deg,rgba(240,10,10,1),rgba(240,10,10,1) 47%,rgba(230,10,10,1) 50%,rgba(230,10,10,1) 100%);
-
-  }
-  .load-trainingPlan-btn{
-    font-size: 22px;
-    // text-transform: uppercase;
-    font-weight: bold;
-    color: rgba(255,255,255,1);
-    margin: 40px 0 40px 0;
-    border-radius: 10px;
-    width: 300px;
-    height: 80px;
-    // background-color: $main-color;
-    border: 0px solid blue;
-    border-radius: 2%;
-    @include linearGradientEf(-10deg,rgba(10,240,10,1),rgba(10,240,10,1) 47%,rgba(10,230,10,1) 50%,rgba(10,230,10,1) 100%);
-
-  }
-}
