--- a/src/scss/partials/common-partials/_fullScreenWarningsStyles.scss
+++ b/src/scss/partials/common-partials/_fullScreenWarningsStyles.scss
@@ -2,7 +2,7 @@
 @import '../../modules/mixins';
 @import "../../modules/mediaQueryMixins";
 
-.notEnoughTimeToPrepareWarningDiv{
+.fullScreenInfo-CNT{
   width: 100vw;
   height: 100vh;
   position: absolute;
@@ -12,7 +12,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  .areyousure-txt{
+  .fullScreenInfo-txt{
     font-size: 38px;
     font-weight: bold;
     color: rgba(250,250,250,1);
@@ -23,7 +23,7 @@
       };
     }
   }
-  .return-fillInForm-btn{
+  .red-btn{
     font-size: 22px;
     // text-transform: uppercase;
     font-weight: bold;
@@ -38,7 +38,7 @@
     @include linearGradientEf(-10deg,rgba(240,10,10,1),rgba(240,10,10,1) 47%,rgba(230,10,10,1) 50%,rgba(230,10,10,1) 100%);
 
   }
-  .load-trainingPlan-btn{
+  .green-btn{
     font-size: 22px;
     // text-transform: uppercase;
     font-weight: bold;
