--- a/src/App.css
+++ b/src/App.css
@@ -1454,6 +1454,8 @@
           margin-left: 19px; } }
 
 .fullScreenInfo-CNT {
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
   position: absolute;
@@ -1464,6 +1466,8 @@
   justify-content: center;
   flex-direction: column; }
   .fullScreenInfo-CNT .fullScreenInfo-txt {
+    margin-left: 4vw;
+    margin-right: 4vw;
     font-size: 38px;
     font-weight: bold;
     color: #fafafa; }
