--- a/src/App.css
+++ b/src/App.css
@@ -1005,34 +1005,51 @@
   background: -moz-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%); }
 
 .select-cnt {
+  border: 1px solid blue;
   width: 100vw;
   height: 9vh;
   background-color: rgba(30, 30, 30, 0.4);
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center; }
+  flex-wrap: wrap; }
   @media (min-width: 768px) {
     .select-cnt {
       height: 47px;
       width: 800px; } }
   .select-cnt .descr-select {
-    width: 100vw;
+    border: 1px solid red;
+    width: 20vw;
+    height: 100%;
     text-align: center;
+    vertical-align: middle;
+    padding-top: 6px;
     font-size: 20px; }
     @media (min-width: 768px) {
       .select-cnt .descr-select {
-        width: 400px;
-        margin-top: 10px; } }
-  .select-cnt input {
-    margin-left: 7px;
-    margin-bottom: 7px; }
-    @media (min-width: 768px) {
-      .select-cnt input {
-        margin-top: 15px; } }
-  .select-cnt .options-select {
-    font-size: 16px;
-    margin-left: 7px; }
+        width: 400px; } }
+  .select-cnt label {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center; }
+    .select-cnt label .input-CNT {
+      border: 1px solid pink;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center; }
+      .select-cnt label .input-CNT input {
+        border: 1px solid white;
+        margin-left: 10px;
+        margin-bottom: 10px; }
+        @media (min-width: 768px) {
+          .select-cnt label .input-CNT input {
+            margin-top: 15px; } }
+      .select-cnt label .input-CNT .options-select {
+        font-size: 16px;
+        margin-left: 7px;
+        border: 1px solid yellow; }
   .select-cnt .single-down-error-FIF-active {
     text-align: center;
     width: 100%;
