adding info sign and preparing component info-icon

--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -31,6 +31,12 @@ $backgroundsection2-SVG: url("./components/images/backgroundsection2.svg");
 $backgroundsection4-SVG: url("./components/images/backgroundsection4.svg");
 $backgroundMain1-SVG: url("./components/images/backgroundMain1.svg");
 
+//info-icon training-plan-cnt
+$iconInfo-SVG: url("./components/images/info-icon.svg");
+$iconInfo2-SVG: url("./components/images/info-icon2.svg");
+$iconInfo3-SVG: url("./components/images/info-icon3.svg");
+$iconInfo4-SVG: url("./components/images/info-icon4.svg");
+
 //advantage dots
 $advantageCalendar-SVG: url("./components/images/advantageCalendar.svg");
 $topShape-SVG: url("./components/images/topShape.svg");
