--- a/src/App.css
+++ b/src/App.css
@@ -1438,10 +1438,10 @@
     #training-plan-cnt .training-day .decription-cnt {
       font-size: 15px;
       display: flex;
-      flex-direction: column;
+      flex-flow: wrap column;
       padding: 3px 0px 0px 4px;
       height: 117px;
-      width: 225px;
+      width: 60vw;
       margin-left: 7px;
       background: repeating-linear-gradient(-18deg, #141414, #141414 47%, #282828 50%, #282828 100%);
       background: -webkit-linear-gradient(-18deg, #141414, #141414 47%, #282828 50%, #282828 100%);
@@ -1451,6 +1451,9 @@
         #training-plan-cnt .training-day .decription-cnt {
           width: 400px;
           font-size: 18px; } }
+      @media (min-width: 768px) {
+        #training-plan-cnt .training-day .decription-cnt {
+          width: 510px; } }
       @media (min-width: 1200px) {
         #training-plan-cnt .training-day .decription-cnt {
           width: 700px;
@@ -1462,6 +1465,43 @@
           width: 820px;
           padding: 6px 0px 0px 10px;
           margin-left: 19px; } }
+      #training-plan-cnt .training-day .decription-cnt p {
+        width: 48vw;
+        font-size: 13.2px; }
+        @media (min-width: 600px) {
+          #training-plan-cnt .training-day .decription-cnt p {
+            font-size: 16px;
+            width: 300px; } }
+        @media (min-width: 768px) {
+          #training-plan-cnt .training-day .decription-cnt p {
+            font-size: 17px;
+            width: 425px; } }
+        @media (min-width: 1200px) {
+          #training-plan-cnt .training-day .decription-cnt p {
+            font-size: 20px;
+            width: 530px; } }
+      #training-plan-cnt .training-day .decription-cnt .infoIcon-CNT {
+        margin: 33px 5px 0 0;
+        justify-content: center;
+        width: 34px;
+        height: 34px;
+        background-image: url("./components/images/info-icon.svg");
+        background-color: white;
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        color: blue;
+        border-radius: 50%;
+        border: 3px solid white; }
+        @media (min-width: 600px) {
+          #training-plan-cnt .training-day .decription-cnt .infoIcon-CNT {
+            width: 45px;
+            height: 45px; } }
+        @media (min-width: 600px) {
+          #training-plan-cnt .training-day .decription-cnt .infoIcon-CNT {
+            margin-top: 25px;
+            width: 55px;
+            height: 55px; } }
 
 .fullScreenInfo-CNT {
   top: 0;
