--- a/src/App.css
+++ b/src/App.css
@@ -1326,6 +1326,56 @@
         background: -o-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%);
         background: -moz-linear-gradient(-10deg, rgba(0, 210, 0, 0.8), rgba(0, 210, 0, 0.8) 47%, rgba(0, 230, 0, 0.8) 50%, rgba(0, 230, 0, 0.8) 100%); }
 
+.showInfoText-active {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 50;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; }
+  .showInfoText-active strong {
+    font-size: 40px;
+    text-align: center; }
+  .showInfoText-active .abc {
+    margin: 4vh 6vw 0 6vw;
+    color: red;
+    font-size: 18px;
+    font-weight: bold;
+    color: #fafafa; }
+    @media (min-width: 600px) {
+      .showInfoText-active .abc {
+        font-size: 23px; } }
+    @media (min-width: 960px) {
+      .showInfoText-active .abc {
+        margin: 6vh 8vw 0 8vw;
+        font-size: 25px; } }
+    @media (min-width: 960px) {
+      .showInfoText-active .abc {
+        margin: 8vh 10vw 0 10vw;
+        font-size: 28px; } }
+  .showInfoText-active .green-btn {
+    font-size: 22px;
+    font-weight: bold;
+    color: white;
+    margin: 40px 0 40px 0;
+    border-radius: 10px;
+    width: 300px;
+    height: 80px;
+    border: 0px solid blue;
+    border-radius: 2%;
+    background: repeating-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%);
+    background: -webkit-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%);
+    background: -o-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%);
+    background: -moz-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%); }
+    @media (min-width: 960px) {
+      .showInfoText-active .green-btn {
+        margin: 60px 0 40px 0; } }
+
 #training-plan-bg {
   display: flex;
   flex-wrap: wrap;
@@ -1367,6 +1417,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
     -webkit-box-shadow: 0px 3px 4px 0 grey;
     -moz-box-shadow: 0px 3px 4px 0 grey;
     -o-transform: 0px 3px 4px 0 grey;
@@ -1485,6 +1536,7 @@
         justify-content: center;
         width: 34px;
         height: 34px;
+        cursor: pointer;
         background-image: url("./components/images/info-icon.svg");
         background-color: white;
         background-size: contain;
@@ -1508,7 +1560,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
   position: absolute;
   z-index: 50;
   background-color: rgba(0, 0, 0, 0.6);
@@ -1517,8 +1568,8 @@
   justify-content: center;
   flex-direction: column; }
   .fullScreenInfo-CNT .fullScreenInfo-txt {
-    margin-left: 4vw;
-    margin-right: 4vw;
+    text-align: center;
+    margin: 0 4vw 6vh 4vw;
     font-size: 38px;
     font-weight: bold;
     color: #fafafa; }
@@ -1555,6 +1606,10 @@
     background: -webkit-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%);
     background: -o-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%);
     background: -moz-linear-gradient(-10deg, #0af00a, #0af00a 47%, #0ae60a 50%, #0ae60a 100%); }
+
+.showInfoText-non-active {
+  display: none;
+  background-color: red; }
 
 * {
   padding: 0px;
