--- a/src/scss/partials/_trainingPlanStyle.scss
+++ b/src/scss/partials/_trainingPlanStyle.scss
@@ -2,6 +2,7 @@
 @import '../modules/mixins';
 @import "../modules/mediaQueryMixins";
 @import "./trainingPlanStyle-partials/infoWindowStyle";
+@import "./trainingPlanStyle-partials/moveToDayField";
 
 
 #training-plan-bg{
