--- a/src/scss/partials/trainingPlanStyle-partials/_moveToDayField.scss
+++ b/src/scss/partials/trainingPlanStyle-partials/_moveToDayField.scss
@@ -3,7 +3,10 @@
   position:fixed;
   right:0;
   top:10vh;
-  width:100px;
+  width:140px;
   height: 70px;
   background-color: red;
+  input{
+    width: 100%;
+  }
 }
